--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -40,5 +40,8 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'com.github.ybq:Android-SpinKit:1.1.0'
+    compile 'com.github.ybq:Android-SpinKit:1.0.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
+
+
